--- a/style.css
+++ b/style.css
@@ -5,3 +5,23 @@
   padding: 0;
   font-family: "Montserrat", sans-serif;
 }
+
+.box {
+    padding: 60px 0;
+    width: 90%;
+    margin: auto;
+    overflow: hidden;
+  }
+
+  .titulo1 {
+    color: rgb(255, 255, 255);
+    font-size: 40px;
+    text-align: center;
+  }
+  
+  .titulo {
+    color: #ff416c;
+    font-size: 28px;
+    text-align: center;
+    margin-bottom: 10px;
+  } 
