--- a/style.css
+++ b/style.css
@@ -25,3 +25,19 @@
     text-align: center;
     margin-bottom: 10px;
   } 
+
+  header {
+    width: 100%;
+    height: 200px;
+    background: #ff416c; 
+    background: -webkit-linear-gradient(
+      to right,
+      #ff4b2b,
+      #ff416c
+    ); 
+    background: linear-gradient(
+      to right,
+      #ff4b2b,
+      #ff416c
+    ); 
+  }
