--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
+ /* darle estilo a todo el documento */
 * {
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
 }
 
+ /* darle estilo a todas las secciones */
 .box {
     padding: 60px 0;
     width: 90%;
@@ -13,12 +15,14 @@
     overflow: hidden;
   }
 
+   /* darle estilo al titulo principal */
   .titulo1 {
     color: rgb(255, 255, 255);
     font-size: 40px;
     text-align: center;
   }
-  
+
+   /* darle estilo a todos los subtemas */
   .titulo {
     color: #ff416c;
     font-size: 28px;
@@ -26,6 +30,7 @@
     margin-bottom: 10px;
   } 
 
+   /*darle un degradado al header*/
   header {
     width: 100%;
     height: 200px;
@@ -40,4 +45,24 @@
       #ff4b2b,
       #ff416c
     ); 
+  }
+
+  /* primero darle alineacion al menu */
+  nav {
+    text-align: right;
+    padding: 30px 50px 0 0;
+  }
+  
+   /* ahora darle estilo al menu (colores)*/
+  nav > a {
+    color: #ffff;
+    font-weight: 200;
+    text-decoration: none;
+    font-size: 15px;
+    margin-right: 10px;
+  }
+
+   /*darle formato cuando se hace click en el menu */
+  nav > a:hover {
+    text-decoration: underline;
   }
