--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
- /* darle estilo a todo el documento */
+ /*estilo a todo el documento */
 * {
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
 }
 
- /* darle estilo a todas las secciones */
+ /*estilo a todas las secciones */
 .box {
     padding: 60px 0;
     width: 90%;
@@ -15,14 +15,14 @@
     overflow: hidden;
   }
 
-   /* darle estilo al titulo principal */
+   /*estilo al titulo principal*/
   .titulo1 {
     color: rgb(255, 255, 255);
     font-size: 40px;
     text-align: center;
   }
 
-   /* darle estilo a todos los subtemas */
+   /*estilo a todos los subtemas*/
   .titulo {
     color: #ff416c;
     font-size: 28px;
@@ -30,7 +30,7 @@
     margin-bottom: 10px;
   } 
 
-   /*darle un degradado al header*/
+   /*un degradado al header*/
   header {
     width: 100%;
     height: 200px;
@@ -47,13 +47,13 @@
     ); 
   }
 
-  /* primero darle alineacion al menu */
+  /*alineacion del menu*/
   nav {
     text-align: right;
     padding: 30px 50px 0 0;
   }
   
-   /* ahora darle estilo al menu (colores)*/
+   /*estilo del menu (colores)*/
   nav > a {
     color: #ffff;
     font-weight: 200;
@@ -62,7 +62,22 @@
     margin-right: 10px;
   }
 
-   /*darle formato cuando se hace click en el menu */
+   /*formato cuando se hace click en el menu*/
   nav > a:hover {
     text-decoration: underline;
+  }
+
+   /*especificaciones de mi primera seccion*/
+  .clase-acerca-de-mi {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .imagen-acerca-de-mi {
+    width: 30%;
+  }
+  
+  .clase-acerca-de-mi .texto-acerca-de-mi {
+    width: 48%;
+    text-align: middle;
   }
