--- a/style.css
+++ b/style.css
@@ -7,12 +7,25 @@
   font-family: "Montserrat", sans-serif;
 }
 
- /*estilo a todas las secciones */
-.box {
+.box1 {
     padding: 60px 0;
     width: 90%;
     margin: auto;
+    overflow: hidden;;
+  }
+
+ /*estilo a todas las secciones */
+.box {
+    padding: 60px 0;
+    width: 95%;
+    margin: auto;
     overflow: hidden;
+    background-color: 	#FFF0C9;
+  }
+
+  .divisores {
+    padding: 15px 0;
+    width: 90%;
   }
 
    /*estilo al titulo principal*/
@@ -76,6 +89,8 @@
   /*imagen en la mitad de la seccion*/
   .imagen-acerca-de-mi {
     width: 30%;
+    border-radius: 10px;
+    margin: 1em;
   }
   
   /*texto en la mitad de la seccion*/
@@ -89,7 +104,6 @@
     height: calc(300px + 3em);
     width: 80vw;
     margin: 1em auto;
-    border: 1px solid #555;
     position: relative;
   }
   
@@ -160,4 +174,35 @@
     input[type="radio"]:nth-of-type(5):checked
     ~ .contenedor-imagen:nth-of-type(5) {
     display: flex;
+  }
+
+/*redondear las imagenes*/
+  .imgRedonda {
+    width:200px;
+    height:200px;
+    border-radius:150px;
+}
+
+/*estilo de la tabla*/
+table {
+    margin: 0 auto;
+    width: 95%;
+    align-items: center;
+}
+
+/*centrar los elementos de la tabla*/
+td{
+    text-align: center;
+}
+
+table td:first-child {
+    width: 100px;
+  }
+
+  table td:nth-child(2) {
+    width: 100px;
+  }
+
+  table td:last-child {
+    width: 100px;
   }
